--- a/ato.yaml
+++ b/ato.yaml
@@ -1,6 +1,6 @@
 ato-version: ^0.2.0
 builds:
   default:
-    entry: elec/src/bme280.ato:Bme280
+    entry: elec/src/bme280.ato:BME280
 dependencies:
 - generics
